--- a/src/index.html
+++ b/src/index.html
@@ -33,8 +33,8 @@ id: index
               </div>
             </fieldset>
           </form>
-          <div class="donate-tile__onward">
-            <a href="#" class="donate-tile__onward-link">Learn more about causes local to you</a>
+          <div class="donate-tile-onward">
+            <a href="#" class="donate-tile-onward-link">Learn more about causes local to you</a>
           </div>
         </article>
     </div>
