--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@ id: prototype
       <div class="target-bar">
         <div class="target-bar-indicator green-mid-bg" data-target-bar-indicator></div>
       </div>
-      <dl class="target-indicator">
+      <dl class="target-indicator" data-target-indicator>
         <dt class="target-indicator-title h2 regular">Raised so far</dt>
         <dd class="target-indicator-amount h1">&pound;<span data-donation-running-total>2,792.55</span></dd>
         <dt class="target-indicator-title h2 regular">Target</dt>
